--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Titre 1</h1>
     <h2>Titre 2</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, sunt repellendus fugit aliquam iste nobis suscipit distinctio quidem mollitia minima ab aperiam ea unde dignissimos corporis necessitatibus blanditiis minus perferendis.</p>
 </body>
 </html>
