My_branch commit 1

--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <h1>Titre 1</h1>
     <h2>Titre 2</h2>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet, sunt repellendus fugit aliquam iste nobis suscipit distinctio quidem mollitia minima ab aperiam ea unde dignissimos corporis necessitatibus blanditiis minus perferendis.</p>
+    <legend>Formulaire d'inscription</legend>
+    <label for="nom">Nom* : </label>
+    <input type="text" name="nom" id="nom" placeholder="Entrez votre nom" maxlength="10" required>
+    <br><br>
 </body>
 </html>
