--- a/index.html
+++ b/index.html
@@ -12,5 +12,8 @@
     <label for="nom">Nom* : </label>
     <input type="text" name="nom" id="nom" placeholder="Entrez votre nom" maxlength="10" required>
     <br><br>
+    <label for="prenom">Prénom* : </label>
+    <input type="text" name="prenom" id="prenom" placeholder="Entrez votre prénom" maxlength="10" required>
+    <br><br>
 </body>
 </html>
