--- a/index.html
+++ b/index.html
@@ -15,5 +15,8 @@
     <label for="prenom">Prénom* : </label>
     <input type="text" name="prenom" id="prenom" placeholder="Entrez votre prénom" maxlength="10" required>
     <br><br>
+                <label for="date_naissance">Date de naissance* :</label>
+            <input type="date" name="date_naissance" id="date_naissance" required>
+            <br><br>
 </body>
 </html>
